kubernetes/home/apps/monitoring/grafana/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.shaklab.com`)
      kind: Rule
      middlewares:
        - name: middlewares-chain-oauth
      services:
        - name: grafana
          port: 80
  tls:
    secretName: shaklab-com-tls-certs
